--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -569,6 +569,11 @@
                     <span>Post Job</span>
                 </a>
 
+                <a href="{% url 'view_pay_requests' %}" class="nav-link  ">
+                    <i class="fas fa-home"></i>
+                    <span>Pay Requests</span>
+                </a>
+
                 <a href="/my-jobs/" class="nav-link">
                     <i class="fas fa-chess-king"></i>
                     <span>My Jobs</span>
