--- a/Student_Jobsite/Pages/templates/Staff/base.html
+++ b/Student_Jobsite/Pages/templates/Staff/base.html
@@ -566,6 +566,10 @@
                     <i class="fas fa-wifi"></i>
                     <span>Jobs</span>
                 </a>
+                <a href="{% url 'request_payment'%}" class="nav-link">
+                    <i class="fas fa-wifi"></i>
+                    <span>Request Pay</span>
+                </a>
  
                 <a href="/applications/" class="nav-link">
                     <i class="fas fa-users-cog"></i>
